<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
       >

        <ImageView
            android:id="@+id/imageDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_gravity="center_horizontal|clip_horizontal"
            />

        <TextView
            android:id="@+id/nameDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/pokemons_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/Olivine"/>
        <TextView
            android:id="@+id/idDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/pokemons_index"
            android:textSize="15sp"
            android:textColor="@color/Sunglow"/>


        <TextView
            android:id="@+id/typeDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/pokemons_type_s"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/Olivine"/>

        <TextView
            android:id="@+id/heightDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/pokemons_height"
            android:textSize="15sp"
            android:textColor="@color/Sunglow"/>

        <TextView
            android:id="@+id/weightDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/pokemons_weight"
            android:textSize="15sp"
            android:textColor="@color/Sunglow"/>
        <Button
            android:id="@+id/backToTeamButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/back_to_team"
            android:textSize="10sp"
             />
    </LinearLayout>
</FrameLayout>